<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#8070DB"
    tools:context=".activity.ShowCountDown">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="25sp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countDown"
        android:textSize="18sp"
        tools:text="@string/waitService"/>

    <Button
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startCountDown"
        android:text="@string/clickOn"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appearButton"
        android:visibility="invisible"
        android:text="@string/openControl"
        android:drawableEnd="@drawable/ic_brightness_low_black_24dp"
        style="@style/login_button_text_appearance">
    </Button>


</LinearLayout>